# furbot-ros

./: test_vel.py
furbot_control/: CMakeLists.txt  package.xml
furbot_control/config/: furbot_control.yaml
furbot_control/launch/: furbot_control.launch
furbot_control/src/: aggregate_topics.cpp  control_furbot.cpp  furbot_odometry.cpp  teleop_furbot.cpp
furbot_description/: CMakeLists.txt  package.xml
furbot_description/urdf/: furbot.gazebo  furbot.xacro  macros.xacro  materials.xacro
furbot_gazebo/: CMakeLists.txt  package.xml
furbot_gazebo/launch/: furbot_mapping_world.launch  furbot_test.launch  furbot_world_1.launch  furbot_world_2.launch  furbot_world_teb_1.launch  furbot_world_teb_2.launch  furbot_world_teb_street.launch
furbot_gazebo/rviz/: furbot.rviz
furbot_gazebo/worlds/: furbot.world  furbot_street.world
furbot_navigation/: CMakeLists.txt  package.xml
furbot_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
furbot_navigation/launch/: furbot_amcl_1.launch  furbot_amcl_2.launch  furbot_mapping.launch  furbot_navigation.launch  move_base_1.launch  move_base_2.launch  move_base_teb.launch  move_base_teb_1.launch  move_base_teb_2.launch  move_base_teb_street.launch
furbot_navigation/maps/: myworld.yaml  myworld_2.yaml  street.yaml
mybot_control/: CMakeLists.txt  package.xml
mybot_control/config/: mybot_control.yaml
mybot_control/launch/: mybot_control.launch
mybot_control/src/: aggregate_topics.cpp  odometry.cpp  teleop_mybot.cpp
mybot_description/: package.xml
mybot_gazebo/: package.xml
mybot_navigation/: CMakeLists.txt  package.xml
(+16 files in other folders)
